--- a/.github/workflows/dailyUpdateTest.yml
+++ b/.github/workflows/dailyUpdateTest.yml
@@ -23,8 +23,13 @@ jobs:
             run: |
               echo "This is a daily updated file." > daily_report.txt
 
-          - name: Upload artifact
-            uses: actions/upload-artifact@v4
-            with:
-              name: daily-artifact
-              path: daily_report.txt
+          - name: Configure Git
+            run: |
+               git config user.name="github_actions_bot"
+               git config user.email="sijohnson@g.hmc.edu"
+
+          - name: Commit and push
+            run : |
+               git add daily_report.txt
+               git commit -m "daily update: $(date)"
+               git push
