--- a/.github/workflows/dailyUpdateTest.yml
+++ b/.github/workflows/dailyUpdateTest.yml
@@ -25,7 +25,7 @@ jobs:
 
           - name: Configure Git
             run: |
-               git config user.name="github_actions_bot"
+               git config user.name="sim1j"
                git config user.email="sijohnson@g.hmc.edu"
 
           - name: Commit and push
