--- a/.github/workflows/dailyUpdateTest.yml
+++ b/.github/workflows/dailyUpdateTest.yml
@@ -25,8 +25,8 @@ jobs:
 
           - name: Configure Git
             run: |
-               git config user.name="Sim1J"
-               git config user.email="sijohnson@g.hmc.edu"
+               git config --global user.name="github-actions[bot]"
+               git config --global user.email="sijohnson@g.hmc.edu"
 
           - name: Commit and push
             run : |
