--- a/.github/workflows/dailyUpdateTest.yml
+++ b/.github/workflows/dailyUpdateTest.yml
@@ -25,7 +25,7 @@ jobs:
 
           - name: Configure Git
             run: |
-               git config --global user.name="github-actions[bot]"
+               git config --global user.name github-actions[bot]
                git config --global user.email="sijohnson@g.hmc.edu"
 
           - name: Commit and push
