--- a/.github/workflows/openmeteo_workflow.yml
+++ b/.github/workflows/openmeteo_workflow.yml
@@ -36,6 +36,6 @@ jobs:
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
-          git add data/
+          git add locations/
           git commit -m "Add daily data for $(date -u +'%Y-%m-%d')" || echo "No changes to commit"
           git push
