--- a/.github/workflows/openmeteo_workflow.yml
+++ b/.github/workflows/openmeteo_workflow.yml
@@ -36,6 +36,7 @@ jobs:
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
+          git pull
           git add locations/
           git commit -m "Add daily data for $(date -u +'%Y-%m-%d')" || echo "No changes to commit"
           git push
