--- a/.github/workflows/fetch_daily_data.yml
+++ b/.github/workflows/fetch_daily_data.yml
@@ -33,4 +33,4 @@ jobs:
           git config user.email "github-actions[bot]@users.noreply.github.com"
           git add data/
           git commit -m "Add daily data for $(date -u +'%Y-%m-%d')" || echo "No changes to commit"
-          git push -f origin master
+          git push
