--- a/.github/workflows/openmeteo_workflow.yml
+++ b/.github/workflows/openmeteo_workflow.yml
@@ -39,4 +39,4 @@ jobs:
           git pull
           git add locations/
           git commit -m "Add daily data for $(date -u +'%Y-%m-%d')" || echo "No changes to commit"
-          git push
+          git push -f origin master
