--- a/.github/workflows/electricity.yml
+++ b/.github/workflows/electricity.yml
@@ -20,7 +20,7 @@ jobs:
 
       - name: Install dependencies
         run: |
-          python -m pip install --upgrade 
+          python -m pip install --upgrade pip
           pip install pandas
 
       - name: Run fetch script
