--- a/.github/workflows/continuous_gauges_workflow.yml
+++ b/.github/workflows/continuous_gauges_workflow.yml
@@ -1,4 +1,4 @@
-name: Continuous Guages Data
+name: Continuous Gauges Data
 
 on:
   # schedule:
@@ -25,7 +25,7 @@ jobs:
 
       - name: Run fetch script
         run: |
-          python scripts/continuous_guages.py
+          python scripts/continuous_gauges.py
 
       - name: Commit & push results
         run: |
