--- a/.github/workflows/continuous_gauges_workflow.yml
+++ b/.github/workflows/continuous_gauges_workflow.yml
@@ -35,5 +35,5 @@ jobs:
           git fetch origin
           git pull origin main
           git add data/
-          git commit -m "Add weather data for $(date -u +'%Y-%m-%d')" || echo "No changes to commit"
+          git commit -m "Add water data for $(date -u +'%Y-%m-%d')" || echo "No changes to commit"
           git push origin main
