--- a/.github/workflows/map.yml
+++ b/.github/workflows/map.yml
@@ -33,6 +33,6 @@ jobs:
           git config user.email "github-actions[bot]@users.noreply.github.com"
           git fetch origin
           git pull origin main
-          git add data/
+          git add /
           git commit -m "Create interactive map for $(date -u +'%Y-%m-%d')" || echo "No changes to commit"
           git push origin main
