--- a/.github/workflows/openmeteo_workflow.yml
+++ b/.github/workflows/openmeteo_workflow.yml
@@ -38,6 +38,6 @@ jobs:
           git config user.email "github-actions[bot]@users.noreply.github.com"
           git fetch origin
           git pull origin main
-          git add locations/
+          git add data/
           git commit -m "Add weather data for $(date -u +'%Y-%m-%d')" || echo "No changes to commit"
           git push origin main
