--- a/.github/workflows/openmeteo_workflow.yml
+++ b/.github/workflows/openmeteo_workflow.yml
@@ -5,13 +5,18 @@ on:
     - cron: "0 0 * * *"
   workflow_dispatch:
 
+concurrency:
+  group: openmeteo-data-update
+  cancel-in-progress: true
+
 jobs:
   fetch-data:
     runs-on: ubuntu-latest
-
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
 
       - name: Set up Python
         uses: actions/setup-python@v5
@@ -21,12 +26,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install requests
-          pip install openmeteo-requests
-          pip install numpy
-          pip install pandas
-          pip install requests_cache
-          pip install retry_requests 
+          pip install requests openmeteo-requests numpy pandas requests_cache retry_requests
 
       - name: Run fetch script
         run: |
@@ -36,8 +36,10 @@ jobs:
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
-          git fetch origin
-          git pull origin main
+
+          git pull --rebase origin main
+
           git add data/weather
           git commit -m "Add weather data for $(date -u +'%Y-%m-%d')" || echo "No changes to commit"
+
           git push origin main
