--- a/.github/workflows/continuous_gauges_workflow.yml
+++ b/.github/workflows/continuous_gauges_workflow.yml
@@ -34,6 +34,6 @@ jobs:
           git config user.email "github-actions[bot]@users.noreply.github.com"
           git fetch origin
           git pull origin main
-          git add data/
+          git add data/ scripts/
           git commit -m "Add water data for $(date -u +'%Y-%m-%d')" || echo "No changes to commit"
           git push origin main
